--- a/consult/less/mainpage.less
+++ b/consult/less/mainpage.less
@@ -342,56 +342,91 @@ body.page-mainpage{
                 }
             }
         }
+        section.sign-up-mail{
+            float: right;
+            width: 300px;
+            height:220px;
+            margin-left: 20px;
+            p{
+                text-align: center;
+                margin-top: 0;
+            }
+            form{
+                width: 100%;
+                margin-top:20px;
+                input{
+                    width: 100%;
+                }
+            }
+        }
         section.ask-question{
             overflow: hidden;
+            background:url('../images/ask-question-bg.jpg') center center;
+            background-size:cover;
+            height:220px;
             a.btn{
                 display: block;
-                float: right;
+                text-align: center;
+                color:@white;
+                border-color:@white;
+                width:200px;
+                margin:20px auto;
+                &:hover{
+                    background: rgba(255,255,255,0.2);
+                }
             }
             h2{
                 display: block;
                 overflow: hidden;
                 font-size: 2.4rem;
+                text-align: center;
+                color:@white;
                 font-weight: 500;
                 padding: 0;
+                margin-top: 20px;
             }
-        }
-        form.ask-question-form{
-            margin-bottom: 20px;
-            overflow: hidden;
-            display:none;
-            i.fa-close{
+            form.ask-question-form{
+                //margin-bottom: 20px;
+                overflow: hidden;
+                display:block;
                 position: absolute;
-                right:30px;
-                top: 30px;
-                z-index: 1;
-                cursor: pointer;
-                &:hover{
-                    color:@sea;
-                }
-            }
-            h4{
-                margin-top: 0;
-                padding-top: 0;
-            }
-            .field.question{
+                top:0;
+                left:0;
                 width: 100%;
-                textarea{
-                    height:100px;
+                display: none;
+                i.fa-close{
+                    position: absolute;
+                    right:30px;
+                    top: 30px;
+                    z-index: 1;
+                    cursor: pointer;
+                    &:hover{
+                        color:@sea;
+                    }
                 }
-            }
-            .field.category{
-                width: 50%;
-                float: left;
-                margin-top: 10px;
-                .select2-container{
-                    width: 100% !important;
+                h4{
+                    margin-top: 0;
+                    padding-top: 0;
                 }
-            }
-            input[type="submit"]{
-                float: right;
-                margin-top: 10px;
-                padding: 9px 40px 7px 40px;
+                .field.question{
+                    width: 100%;
+                    textarea{
+                        height:75px;
+                    }
+                }
+                .field.category{
+                    width: 50%;
+                    float: left;
+                    margin-top: 10px;
+                    .select2-container{
+                        width: 100% !important;
+                    }
+                }
+                input[type="submit"]{
+                    float: right;
+                    margin-top: 10px;
+                    padding: 9px 40px 7px 40px;
+                }
             }
         }
         section.questions{
