--- a/consult/less/page_library_article.less
+++ b/consult/less/page_library_article.less
@@ -259,6 +259,7 @@ body.page-library-article{
 	}
 	section.repost-article{
 		overflow: hidden;
+		margin-bottom: 20px;
 		.social{
 			.social-item{
 				float: left;
@@ -325,4 +326,25 @@ body.page-library-article{
 			}
 		}
 	}
+	section.sign-up-mail{
+		overflow: hidden;
+        max-width:43%;
+        p{
+            text-align: center;
+            margin-top: 0;
+        }
+        a#sign-up-email-link{
+        	width: 200px;
+        	margin:auto;
+        	text-align: center;
+        	display: block;
+        }
+        // form{
+        //     width: 100%;
+        //     margin-top:20px;
+        //     input{
+        //         width: 100%;
+        //     }
+        // }
+    }
 }
