--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -23,3 +23,4 @@
 @import url('page_payment_history.less');
 @import url('page_user_consults.less');
 @import url('page_faq.less');
+@import url('media.less');
