--- a/consult/less/page_library.less
+++ b/consult/less/page_library.less
@@ -211,9 +211,12 @@ body.page-library{
 					height:500px;
 					.image{
 						width: 100%;
+						overflow: hidden;
+						height:215px;
 						img{
 							display: block;
-							width: 100%;
+							min-width: 100%;
+							min-height: 100%;
 						}
 					}
 					.content{
