--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -24,3 +24,4 @@
 @import url('page_user_consults.less');
 @import url('page_faq.less');
 @import url('media.less');
+@import url('modal_payment.less');
