--- a/consult/less/page_profile_settings.less
+++ b/consult/less/page_profile_settings.less
@@ -755,6 +755,14 @@ body.page-profile-settings{
                 margin-top: 30px;
                 margin-right: 10px;
             }
+            .partner{
+                margin-bottom: 25px;
+                padding-top: 25px;
+                border-top:solid 1px #b9d4cc;
+                &:first-child{
+                    border-top:none;
+                }
+            }
         }
     }
 }
